# backend/docs/swagger.json
@@ -732,6 +732,50 @@
                 }
             }
         },
+        "/users/me/profile": {
+            "get": {
+                "description": "Получить профиль пользователя с постами по JWT",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Profile"
+                ],
+                "summary": "Получить профиль пользователя по JWT",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer \u003cjwt токен\u003e",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/internal_features_auth_transport_http.ProfileResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный запрос",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_tryingmyb3st_PolyTweet_internal_core_domain.CustomError"
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_tryingmyb3st_PolyTweet_internal_core_domain.InternalError"
+                        }
+                    }
+                }
+            }
+        },
         "/users/{UserId}/posts": {
             "get": {
                 "description": "Ищет посты пользователя по ID с поддержкой пагинации через параметры page и pageSize.",
@@ -1145,15 +1189,15 @@
         "internal_features_auth_transport_http.UpdateProfileRequest": {
             "type": "object",
             "properties": {
-                "bio": {
-                    "type": "string",
-                    "x-order": "0",
-                    "example": "lol"
-                },
                 "avatar_url": {
                     "type": "string",
                     "x-order": "0",
                     "example": "http://localhost:8333/6,0307364665"
+                },
+                "bio": {
+                    "type": "string",
+                    "x-order": "0",
+                    "example": "lol"
                 }
             }
         },
